tests/macro-tests/cases/widget_new/missing_value_before_when1.stderr
error: expected `;`
 --> cases/widget_new/missing_value_before_when1.rs:8:9
  |
8 |         when *#is_pressed {
  |         ^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value_before_when1.rs:7:9
   |
6  |       let _ = Wgt! {
   |  _____________-
7  | |         margin = // missing 0; here
   | |         ^^^^^^
8  | |         when *#is_pressed {
9  | |             margin = 20;
10 | |         }
11 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt/src/layout_props.rs
   |
   | pub fn margin(child: impl IntoUiNode, margin: impl IntoVar<SideOffsets>) -> UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (/* margin */)
   |
